--- a/styles.css
+++ b/styles.css
@@ -11,20 +11,37 @@ header {
     position: relative;
     padding: 1rem;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
 header a {
-    font-size: 20px;
+    font-size: 30px;
     display: flex;
     align-items: center;
 }
 
 header b {
-    margin-top: 1.2rem;
     display: flex;
+    margin-top: 1.2rem;    
+    justify-content: flex-end;
+
 }
+
+.search-box {
+    width: 200px;
+    height: 20px;
+    border: 2px solid black;
+    text-align: right;
+}
+
+
+nav img {
+    width: 26px;
+}
+
 nav a {
+    font-size: 20px;
     color: black;
     text-decoration: none;
     text-align: center;
@@ -36,7 +53,6 @@ nav ul {
 }
 
 nav li {
-    font-size: 20px;
     display: inline;
     margin-left: .5rem;
 }
