Edited Footer Section in HTML + Created Footer Section Sytles in CSS

--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,10 @@ nav p {
 .product_link {
     display: flex;
     justify-content: space-between;
+    background: #BF7631;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .product_line {
@@ -221,8 +225,31 @@ nav p {
 }
 
 .send_button {
-    background: rgb(170, 122, 33);
+    background: #BF7631;
     color: white;
     font-weight: bold;
     font-size: 20px;
+}
+
+footer {
+    background-color: #bf7631;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer_icons {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.footer_logo_spacing {
+    display: flex;
+    margin-right: 280px;
+}
+
+.footer_text {
+    display: flex;
+    gap: 10rem;
 }
