--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,10 @@ nav p {
     margin-top: 15px;
 }
 
-.home_img {
+.home_image {
+    width: 1371px;
+}
+.home_img_background {
     background-color: black;
     margin-top: 25px;
     display: flex;
